--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,130 @@
--f https://download.pytorch.org/whl/torch_stable.html 
-torch==2.0.1+cu118
-accelerate
-appdirs
-loralib
-bitsandbytes==0.37.0
-black
-black[jupyter]
-datasets
-fire
-git+https://github.com/huggingface/peft.git
-transformers>=4.31.0
-sentencepiece
-py7zr
-scipy
-optimum
-pydantic
+accelerate==0.22.0
+aiohttp==3.8.5
+aioprometheus==23.3.0
+aiosignal==1.3.1
+annotated-types==0.5.0
+anyio==3.7.1
+appdirs==1.4.4
+asttokens==2.2.1
+async-timeout==4.0.3
+attrs==23.1.0
+backcall==0.2.0
+bitsandbytes==0.43.3
+black==23.7.0
+Brotli==1.0.9
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+cmake==3.27.2
+coloredlogs==15.0.1
+datasets==2.14.4
+decorator==5.1.1
+dill==0.3.7
+einops==0.7.0
+exceptiongroup==1.2.0
+executing==1.2.0
+fastapi==0.104.1
+filelock==3.12.2
+fire==0.5.0
+frozenlist==1.4.0
+fsspec==2023.6.0
+h11==0.14.0
+httptools==0.6.1
+huggingface-hub==0.24.6
+humanfriendly==10.0
+idna==3.4
+inflate64==0.3.1
+ipython==8.14.0
+jedi==0.19.0
+Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+lit==16.0.6
+loralib==0.1.1
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+msgpack==1.0.7
+multidict==6.0.4
+multiprocess==0.70.15
+multivolumefile==0.2.3
+mypy-extensions==1.0.0
+networkx==3.1
+ninja==1.11.1.1
+numpy==1.25.2
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+optimum==1.22.0
+orjson==3.9.10
+packaging==23.1
+pandas==2.0.3
+parso==0.8.3
+pathspec==0.11.2
+peft @ git+https://github.com/huggingface/peft.git@6e783780ca9df3a623992cc4d1d665001232eae0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.10.0
+prompt-toolkit==3.0.39
+protobuf==4.24.1
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py7zr==0.20.6
+pyarrow==13.0.0
+pybcj==1.0.1
+pycryptodomex==3.18.0
+pydantic==1.10.13
+pydantic_core==2.6.3
+Pygments==2.16.1
+pyppmd==1.0.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3
+PyYAML==6.0.1
+pyzstd==0.15.9
+quantile-python==1.1
+ray==2.8.1
+referencing==0.32.0
+regex==2023.8.8
+requests==2.31.0
+rpds-py==0.13.2
+safetensors==0.4.5
+scipy==1.11.2
+sentencepiece==0.2.0
+six==1.16.0
+sniffio==1.3.0
+stack-data==0.6.2
+starlette==0.27.0
+sympy==1.12
+termcolor==2.3.0
+texttable==1.6.7
+tokenize-rt==5.2.0
+tokenizers==0.19.1
+tomli==2.0.1
+torch==2.1.1
+tqdm==4.66.1
+traitlets==5.9.0
+transformers==4.44.2
+triton==2.1.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.4
+uvicorn==0.24.0.post1
+uvloop==0.19.0
+vllm==0.2.3
+watchfiles==0.21.0
+wcwidth==0.2.6
+websockets==12.0
+xformers==0.0.23
+xxhash==3.3.0
+yarl==1.9.2
